8.11. Coins. Memoization.